--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -51,7 +51,7 @@ header {
   width: 70%;
   letter-spacing: 1px;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .search-wrapper {
